--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="gallery">
-        <img src="https://picsum.photos/id/1028/300/300" alt="a forest after an apocalypse">
-        <img src="https://picsum.photos/id/15/300/300" alt="a waterfall and many rocks">
-        <img src="https://picsum.photos/id/1040/300/300" alt="a house on a mountain">
-        <img src="https://picsum.photos/id/106/300/300" alt="sime pink flowers">
-        <img src="https://picsum.photos/id/136/300/300" alt="big rocks with some trees">
-        <img src="https://picsum.photos/id/1039/300/300" alt="a waterfall, a lot of tree and a great view from the sky">
-        <img src="https://picsum.photos/id/110/300/300" alt="a cool landscape">
-        <img src="https://picsum.photos/id/1047/300/300" alt="inside a town between two big buildings">
-        <img src="https://picsum.photos/id/1057/300/300" alt="a great view of the sea above the mountain">
+        <img src="images/_DSC0755.jpg" alt="dog westie in window">
+        <img src="images/_DSC0760.jpg" alt="face dog westie">
+        <img src="images/_DSC0765.jpg" alt="dog sleeping with human">
+        <img src="images/_DSC0778.jpg" alt="westie dog resting">
+        <img src="images/_DSC0779.jpg" alt="westie sleeping deep">
+        <img src="images/_DSC0780.jpg" alt="yawning dog">
+        <img src="images/_DSC0781.jpg" alt="beautiful westie">
+        <img src="images/_DSC0790.jpg" alt="westie with soccer ball">
+        <img src="images/_DSC0795.jpg" alt="westie face">
       </div>
 </body>
 </html>
